@@ -13,7 +13,7 @@ BEGIN {
 use PPI;
 
 # Execute the tests
-use Test::More tests => 33;
+use Test::More tests => 51;
 
 # =begin testing __insert_after 6
 {
@@ -49,6 +49,46 @@ is( $Document->serialize, "print 'Hello World'foo;",
 
 
 
+# =begin testing ancestor_of 9
+{
+my $Document = PPI::Document->new( \'( [ thingy ] ); $blarg = 1' );
+isa_ok( $Document, 'PPI::Document' );
+ok(
+	$Document->ancestor_of($Document),
+	'Document is an ancestor of itself.',
+);
+
+my $words = $Document->find('Token::Word');
+is(scalar @{$words}, 1, 'Document contains 1 Word.');
+my $word = $words->[0];
+ok(
+	$word->ancestor_of($word),
+	'Word is an ancestor of itself.',
+);
+ok(
+	! $word->ancestor_of($Document),
+	'Word is not an ancestor of the Document.',
+);
+ok(
+	$Document->ancestor_of($word),
+	'Document is an ancestor of the Word.',
+);
+
+my $symbols = $Document->find('Token::Symbol');
+is(scalar @{$symbols}, 1, 'Document contains 1 Symbol.');
+my $symbol = $symbols->[0];
+ok(
+	! $word->ancestor_of($symbol),
+	'Word is not an ancestor the Symbol.',
+);
+ok(
+	! $symbol->ancestor_of($word),
+	'Symbol is not an ancestor the Word.',
+);
+}
+
+
+
 # =begin testing column_number 3
 {
 my $document = PPI::Document->new(\<<'END_PERL');
@@ -61,6 +101,46 @@ isa_ok( $document, 'PPI::Document' );
 my $words = $document->find('PPI::Token::Word');
 is( scalar @{$words}, 1, 'Found expected word token.' );
 is( $words->[0]->column_number, 4, 'Got correct column number.' );
+}
+
+
+
+# =begin testing descendant_of 9
+{
+my $Document = PPI::Document->new( \'( [ thingy ] ); $blarg = 1' );
+isa_ok( $Document, 'PPI::Document' );
+ok(
+	$Document->descendant_of($Document),
+	'Document is a descendant of itself.',
+);
+
+my $words = $Document->find('Token::Word');
+is(scalar @{$words}, 1, 'Document contains 1 Word.');
+my $word = $words->[0];
+ok(
+	$word->descendant_of($word),
+	'Word is a descendant of itself.',
+);
+ok(
+	$word->descendant_of($Document),
+	'Word is a descendant of the Document.',
+);
+ok(
+	! $Document->descendant_of($word),
+	'Document is not a descendant of the Word.',
+);
+
+my $symbols = $Document->find('Token::Symbol');
+is(scalar @{$symbols}, 1, 'Document contains 1 Symbol.');
+my $symbol = $symbols->[0];
+ok(
+	! $word->descendant_of($symbol),
+	'Word is not a descendant the Symbol.',
+);
+ok(
+	! $symbol->descendant_of($word),
+	'Symbol is not a descendant the Word.',
+);
 }
 
 
